Updated code with fix errors

--- a/Heart_Disease_Prediction.ipynb
+++ b/Heart_Disease_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPf6j8wysYTkeReROxpw9jk",
+      "authorship_tag": "ABX9TyNQ3v1eE27xMgjpUbcuxPfR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "qG3cNhh9wKDz"
       },
@@ -58,7 +58,7 @@
           "height": 73
         },
         "id": "YtJ6Wjrowvu_",
-        "outputId": "c72eb212-73f6-40e2-8c16-db4472b169ad"
+        "outputId": "8c223404-1c64-4296-d8b4-e3f35957ab66"
       },
       "execution_count": 4,
       "outputs": [
@@ -70,9 +70,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b47dd773-1a4e-4675-862b-b555cc21f16a\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-e259f70e-9e5b-4f21-b192-20e30ff7cbed\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-b47dd773-1a4e-4675-862b-b555cc21f16a\">\n",
+              "     <output id=\"result-e259f70e-9e5b-4f21-b192-20e30ff7cbed\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -280,9 +280,9 @@
           "height": 241
         },
         "id": "jfx93zRw0CMk",
-        "outputId": "6d52be29-2da3-4da5-d587-268168009044"
+        "outputId": "3f9c10f9-d178-4aad-ad54-2aadb3962874"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b6903eed-7499-4410-bdcd-619defc821c2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e9f34500-5b7d-4140-bb9f-20bc6599d545\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -444,7 +444,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6903eed-7499-4410-bdcd-619defc821c2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9f34500-5b7d-4140-bb9f-20bc6599d545')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -496,12 +496,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b6903eed-7499-4410-bdcd-619defc821c2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e9f34500-5b7d-4140-bb9f-20bc6599d545 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b6903eed-7499-4410-bdcd-619defc821c2');\n",
+              "        const element = document.querySelector('#df-e9f34500-5b7d-4140-bb9f-20bc6599d545');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -521,8 +521,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-502484db-58ee-4c8e-836d-55fb7ab64c8c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-502484db-58ee-4c8e-836d-55fb7ab64c8c')\"\n",
+              "<div id=\"df-77c4650c-47f3-43a6-9fae-819c01e0df2c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-77c4650c-47f3-43a6-9fae-819c01e0df2c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -641,7 +641,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-502484db-58ee-4c8e-836d-55fb7ab64c8c button');\n",
+              "        document.querySelector('#df-77c4650c-47f3-43a6-9fae-819c01e0df2c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -658,7 +658,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 8
         }
       ]
     },
@@ -673,9 +673,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cNuAJAYr0bS-",
-        "outputId": "15256755-a052-4ef3-9c5c-9c57d6683713"
+        "outputId": "a6b6f0c8-c9d7-400d-aa30-121f6dbb7d9e"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,9 +719,9 @@
           "height": 554
         },
         "id": "SV3Pmjan0oE3",
-        "outputId": "6bc40feb-f9fb-4b25-f88a-f025ab8c68d9"
+        "outputId": "1f65177d-2348-4710-afd8-30b7e0cc6481"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,7 +833,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
     },
@@ -859,9 +859,9 @@
           "height": 241
         },
         "id": "dM4CFg0H0zhp",
-        "outputId": "f73d3165-1d29-492c-85dc-b88e928bbc9f"
+        "outputId": "43a4d6c3-aa11-400c-df47-077ab1b6cdc7"
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +890,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9765034b-9bee-4825-9c77-a8ee63f2d138\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-439e4a46-5146-42b8-84e7-fb8b44632603\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1023,7 +1023,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9765034b-9bee-4825-9c77-a8ee63f2d138')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-439e4a46-5146-42b8-84e7-fb8b44632603')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1075,12 +1075,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9765034b-9bee-4825-9c77-a8ee63f2d138 button.colab-df-convert');\n",
+              "        document.querySelector('#df-439e4a46-5146-42b8-84e7-fb8b44632603 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9765034b-9bee-4825-9c77-a8ee63f2d138');\n",
+              "        const element = document.querySelector('#df-439e4a46-5146-42b8-84e7-fb8b44632603');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1100,8 +1100,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b2659c0f-3b2e-4572-89a3-0ee0b8418d56\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b2659c0f-3b2e-4572-89a3-0ee0b8418d56')\"\n",
+              "<div id=\"df-53fe6a50-003d-40ca-979b-31506157a706\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-53fe6a50-003d-40ca-979b-31506157a706')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1220,7 +1220,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b2659c0f-3b2e-4572-89a3-0ee0b8418d56 button');\n",
+              "        document.querySelector('#df-53fe6a50-003d-40ca-979b-31506157a706 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1237,7 +1237,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 11
         }
       ]
     },
@@ -1252,9 +1252,9 @@
           "height": 355
         },
         "id": "TFGRZFQt1CHe",
-        "outputId": "6655fed8-ac91-473c-e0e4-c552d377d015"
+        "outputId": "1a8d176d-fcb6-4342-cd5e-f572cca5e67b"
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1302,7 +1302,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d4ba76f0-47c7-4fdb-994d-d5221efbe391\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b59b8ede-69bc-4c12-8040-bce57f3c1ce7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1489,7 +1489,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4ba76f0-47c7-4fdb-994d-d5221efbe391')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b59b8ede-69bc-4c12-8040-bce57f3c1ce7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1541,12 +1541,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d4ba76f0-47c7-4fdb-994d-d5221efbe391 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b59b8ede-69bc-4c12-8040-bce57f3c1ce7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d4ba76f0-47c7-4fdb-994d-d5221efbe391');\n",
+              "        const element = document.querySelector('#df-b59b8ede-69bc-4c12-8040-bce57f3c1ce7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1566,8 +1566,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2f8d70f1-4929-4943-b61a-6c83fa9524cc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2f8d70f1-4929-4943-b61a-6c83fa9524cc')\"\n",
+              "<div id=\"df-ac02d6f2-9fe1-4549-ab50-a59f11f380d6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ac02d6f2-9fe1-4549-ab50-a59f11f380d6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1686,7 +1686,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2f8d70f1-4929-4943-b61a-6c83fa9524cc button');\n",
+              "        document.querySelector('#df-ac02d6f2-9fe1-4549-ab50-a59f11f380d6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1702,7 +1702,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 12
         }
       ]
     },
@@ -1723,9 +1723,9 @@
           "height": 849
         },
         "id": "j2bVvz0i1Lpj",
-        "outputId": "350bd044-4639-4bce-bc0c-739b802ef50e"
+        "outputId": "66a85735-d68c-4380-a3ec-918b4a87ed4e"
       },
-      "execution_count": 29,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1757,9 +1757,9 @@
           "height": 1000
         },
         "id": "5V3Dlf2D1fIl",
-        "outputId": "b935ff13-e7c5-4c03-aaa6-6712800f8c66"
+        "outputId": "fae228f7-75a8-4a4f-fbca-4771930b04b9"
       },
-      "execution_count": 30,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1817,9 +1817,9 @@
           "height": 545
         },
         "id": "tgximIu71_SZ",
-        "outputId": "bbda147d-1965-4343-f5b1-ecd0f071588a"
+        "outputId": "5f94d2d6-2d7b-447f-c46b-2256abe3bdfc"
       },
-      "execution_count": 31,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1853,9 +1853,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8x4ytqcU2JAr",
-        "outputId": "a0db9ac4-b426-4ac8-dc11-cc6c9255ad37"
+        "outputId": "3b0b8af7-76d2-4fee-a94d-2a4ebe093309"
       },
-      "execution_count": 32,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1872,13 +1872,18 @@
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
         "\n",
         "# Train Logistic Regression model\n",
         "lr_model = LogisticRegression(max_iter=1000)\n",
-        "lr_model.fit(X_train, y_train)\n",
+        "lr_model.fit(X_train_scaled, y_train)\n",
         "\n",
         "# Predictions\n",
-        "y_pred_lr = lr_model.predict(X_test)\n",
+        "y_pred_lr = lr_model.predict(X_test_scaled)\n",
         "\n",
         "# Evaluation\n",
         "print(\"Logistic Regression Accuracy:\", accuracy_score(y_test, y_pred_lr))\n",
@@ -1894,27 +1899,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 819
+          "height": 680
         },
         "id": "eQtCq1Hm2Rol",
-        "outputId": "0925584d-90a1-4919-8bb1-37a6f00efa0c"
+        "outputId": "b7670a3a-200f-404e-fbff-6b1aa654c3de"
       },
-      "execution_count": 33,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -1974,9 +1965,9 @@
           "height": 680
         },
         "id": "H3s2kJ0O2eKs",
-        "outputId": "4e94e9df-3684-457b-c1ee-f8a5bf2ddac5"
+        "outputId": "117e127c-a261-425b-8e97-f6b255c800be"
       },
-      "execution_count": 34,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -2015,7 +2006,7 @@
         "accuracy_scores = [accuracy_score(y_test, y_pred_lr), accuracy_score(y_test, y_pred_dt)]\n",
         "\n",
         "plt.figure(figsize=(8, 5))\n",
-        "sns.barplot(x=models, y=accuracy_scores, palette=\"viridis\")\n",
+        "sns.barplot(x=models, y=accuracy_scores, hue=models, palette=\"viridis\")\n",
         "plt.title(\"Model Accuracy Comparison\")\n",
         "plt.ylabel(\"Accuracy\")\n",
         "plt.show()\n"
@@ -2023,24 +2014,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 575
+          "height": 468
         },
         "id": "aUH7Ojax3Hla",
-        "outputId": "3bdfcb1c-1b33-44f7-dcc9-a5caf63b010d"
+        "outputId": "e2100b89-6021-4469-d79a-f2985bc37b16"
       },
-      "execution_count": 35,
+      "execution_count": 21,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-35-9ab36deaa650>:5: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(x=models, y=accuracy_scores, palette=\"viridis\")\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
